hdmi-out/renamedSDK/.metadata/.plugins/org.eclipse.cdt.ui/hdmibsp_vsyncfix_xilffs_polled_example_1.build.log
14:30:35 **** Auto Build of configuration Debug for project hdmibsp_vsyncfix_xilffs_polled_example_1 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/xilffs_polled_example.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xilffs_polled_example.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../hdmibsp_vsyncfix/ps7_cortexa9_0/include -MMD -MP -MF"src/xilffs_polled_example.d" -MT"src/xilffs_polled_example.o" -o "src/xilffs_polled_example.o" "../src/xilffs_polled_example.c"
In file included from ../src/xilffs_polled_example.c:71:0:
../../hdmibsp_vsyncfix/ps7_cortexa9_0/include/xparameters.h:1:0: error: unterminated #ifndef
 #ifndef XPARAMETERS_H   /* prevent circular inclusions */
 
In file included from ../../hdmibsp_vsyncfix/ps7_cortexa9_0/include/xil_printf.h:12:0,
                 from ../../hdmibsp_vsyncfix/ps7_cortexa9_0/include/xsdps.h:165,
                 from ../src/xilffs_polled_example.c:72:
../../hdmibsp_vsyncfix/ps7_cortexa9_0/include/xparameters.h:1:0: error: unterminated #ifndef
 #ifndef XPARAMETERS_H   /* prevent circular inclusions */
 
In file included from ../../hdmibsp_vsyncfix/ps7_cortexa9_0/include/xsdps_hw.h:80:0,
                 from ../../hdmibsp_vsyncfix/ps7_cortexa9_0/include/xsdps.h:168,
                 from ../src/xilffs_polled_example.c:72:
../../hdmibsp_vsyncfix/ps7_cortexa9_0/include/xparameters.h:1:0: error: unterminated #ifndef
 #ifndef XPARAMETERS_H   /* prevent circular inclusions */
 
In file included from ../../hdmibsp_vsyncfix/ps7_cortexa9_0/include/ffconf.h:12:0,
                 from ../../hdmibsp_vsyncfix/ps7_cortexa9_0/include/ff.h:26,
                 from ../src/xilffs_polled_example.c:74:
../../hdmibsp_vsyncfix/ps7_cortexa9_0/include/xparameters.h:1:0: error: unterminated #ifndef
 #ifndef XPARAMETERS_H   /* prevent circular inclusions */
 
../src/xilffs_polled_example.c: In function 'FfsSdPolledExample':
../src/xilffs_polled_example.c:195:8: warning: implicit declaration of function 'f_mkfs'; did you mean 'f_mkdir'? [-Wimplicit-function-declaration]
  Res = f_mkfs(Path, 0, 0);
        ^~~~~~
        f_mkdir
make: *** [src/xilffs_polled_example.o] Fejl 1

14:30:35 Build Finished (took 402ms)

